# cv-bspline

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  clipboard.txt  vcpkg.json
src/: BSplineGrid.cpp  BSplineGrid.h  BSplineMat.cpp  BSplineMat.h  BSplineMiscUtil.cpp  BSplineMiscUtil.h  BSplineVector.cpp  BSplineVector.h  BezierMat.cpp  BezierMat.h  BezierMat3d.cpp  BezierMat3d.h  BezierUtil.cpp  BezierUtil.h  BezierVector.cpp  BezierVector.h  CMakeLists.txt  CvPlotUtil.cpp  CvPlotUtil.h  EigenClassImpl.cpp  GnuPlotUtil.cpp  GnuPlotUtil.h  ImageTransformBSpline.cpp  ImageTransformBSpline.h  MatWave.cpp  MatWave.h  ShowBSplineDistortion.cpp  ShowBSplineDistortion.h  cudaBSplineCoeffs.cu  cudaBSplineCoeffs.h  cudaBSplineEval.cu  cudaBSplineEval.h  cudaBSplineTransform.cu  cudaBSplineTransform.h  cudaBezier.cu  cudaBezier.h  cudaBezierSeparated.cu  cudaUtil.cu  cudaUtil.h  main.cpp  (+2 more)
src/fitCurves/: fitCurves.cpp  readme.txt
